# dimitri-portfolio

./: .dockerignore  .env  .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django_ci_cd_pipeline.yml  pr.yml
mainpage/: admin.py  models.py  test_views.py  views.py
mainpage/migrations/: 0001_initial.py  0002_project_picture.py  0003_auto_20240324_1738.py
mainpage/static/css/: mention-cookies.css  style.css
mainpage/static/frontend/assets/: index-B7jMB0eU.css  index-Bmlx0Oau.css  index-BuiZuDLi.js  index-CPYF5fGd.css  index-Cf-v_TSr.js  index-D7gsizj6.js  index-jCiUoNVn.js
mainpage/static/js/: navbar-menu.js
mainpage/templates/mainpage/: base.html  cookies.html  index.html  mentions.html
nginx/: nginx.conf
portfolio/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  urls.py
portfolio/mainpage/: test_views.py
portfolio/mainpage/static/css/: style.css
portfolio/mainpage/templates/mainpage/: index.html
portfolio/portfolio/: settings.py  urls.py
projectapi/: serializers.py  views.py
static/frontend/assets/: index-BmJV865T.js
staticfiles/css/: style.css
